# greenroom

./: README.md  pyproject.toml
src/greenroom/: config.py  exceptions.py  server.py  utils.py
src/greenroom/models/: __init__.py  genre.py  media.py  media_types.py  responses.py
src/greenroom/services/: __init__.py  base.py  protocols.py
src/greenroom/services/llm/: __init__.py  config.py  ollama_client.py  service.py
src/greenroom/services/tmdb/: __init__.py  client.py  config.py  models.py  service.py
src/greenroom/tools/: __init__.py  agent_tools.py  discovery_tools.py  genre_tools.py
src/greenroom/tools/genre_tools/: __init__.py  fetching.py  operations.py
src/mcp_entertainment_recommender/: server.py
tests/greenroom/: test_exceptions.py  test_server.py  test_type_checking.py
tests/greenroom/services/llm/: test_ollama_client.py  test_service.py
tests/greenroom/services/tmdb/: test_service.py
tests/greenroom/tools/: test_agent_tools.py  test_discovery_tools.py  test_genre_tools.py  test_tool_integrations.py
tests/greenroom/tools/genre_tools/: test_fetching.py  test_operations.py
tests/mcp_entertainment_recommender/: test_server.py
