[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-entertainment-recommender"
version = "0.1.0"
description = "MCP server providing entertainment recommendation utilities via TMDB API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Chris Brickey", email = "chrisbrickey@example.com"}
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
mcp-entertainment-recommender = "mcp_entertainment_recommender.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_entertainment_recommender"]
